--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "ayaya_website",
-  "version": "1.0.0",
-  "description": "CV et Blog personnel d'Ayaya",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch style/scss:style/css --style expanded"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Haya-2/Ayaya_WebSite.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Haya-2/Ayaya_WebSite/issues"
-  },
-  "homepage": "https://github.com/Haya-2/Ayaya_WebSite#readme",
-  "devDependencies": {
-    "sass": "^1.93.2"
-  }
+    "name": "ayaya_website",
+    "version": "1.0.0",
+    "description": "CV et Blog personnel d'Ayaya",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "npm run lint:js && npm run lint:css",
+        "lint:js": "eslint . --ignore-pattern ancien_cv",
+        "lint:css": "stylelint \"style/scss/**/*.scss\"",
+        "sass": "sass --watch style/scss:style/css --style expanded"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Haya-2/Ayaya_WebSite.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Haya-2/Ayaya_WebSite/issues"
+    },
+    "homepage": "https://github.com/Haya-2/Ayaya_WebSite#readme",
+    "devDependencies": {
+        "@eslint/js": "^9.36.0",
+        "eslint": "^9.36.0",
+        "postcss-scss": "^4.0.9",
+        "sass": "^1.93.2",
+        "stylelint": "^16.24.0",
+        "stylelint-config-recommended-scss": "^16.0.2",
+        "stylelint-config-standard": "^39.0.0",
+        "stylelint-config-standard-scss": "^16.0.0",
+        "stylelint-scss": "^6.12.1"
+    }
 }
